# chatterbox-spd

./: .editorconfig  .gitignore  .packit.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  chatterbox-spd.spec  install.sh  pyproject.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: build-container.yml  ci.yml  release.yml
config/: chatterbox.conf
config/modules.d/: chatterbox.conf
container/: Containerfile  build.sh  chatterbox-tts-cuda.container  chatterbox-tts-cuda.socket  chatterbox-tts.container  chatterbox-tts.socket
